@@ -44,6 +44,10 @@ Library
 - Issue #27897: Fixed possible crash in sqlite3.Connection.create_collation()
   if pass invalid string-like object as a name.  Patch by Xiang Zhang.
 
+- Issue #18844: random.choices() now has k as a keyword-only argument
+  to improve the readability of common cases and the come into line
+  with the signature used in other languages.
+
 - Issue #18893: Fix invalid exception handling in Lib/ctypes/macholib/dyld.py.
   Patch by Madison May.
 
